improve: config system